--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,8 @@
             android:layout_height="400dp"
             app:cardCornerRadius="40dp"
             app:cardElevation="10dp"
+            android:background="@color/white"
+            app:backgroundTint="@null"
             android:layout_gravity="center"
             android:layout_marginStart="40dp">
 
@@ -50,6 +52,7 @@
                 android:layout_gravity="center_horizontal"
                 android:background="@drawable/gra"
                 android:layout_marginTop="100dp"
+                android:textAlignment="center"
                 android:textColor="@color/white"
                 android:layout_marginStart="50dp"/>
             <TextView
@@ -64,6 +67,7 @@
                 android:layout_width="200dp"
                 android:layout_height="50dp"
                 android:id="@+id/etxtcontact"
+                android:textAlignment="center"
                 android:layout_gravity="center_horizontal"
                 android:background="@drawable/gra"
                 android:textColor="@color/white"
